fix spacing lights

--- a/css.css
+++ b/css.css
@@ -105,7 +105,7 @@ img {
  }
 
  .activityLights {
-  height: 10%;
+  height: 8%;
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
